Mac build and header search path sanity fix.
Reviewed by Sam Weinig and Tim Hatcher.

Move base setting for HEADER_SEARCH_PATHS into Base.xcconfig, and extend
it in JavaScriptCore.xcconfig.  This removes the need to override it on a
per-target basis inside the .xcodeproj file.

* Configurations/Base.xcconfig:
* Configurations/JavaScriptCore.xcconfig:
* JavaScriptCore.xcodeproj/project.pbxproj:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27845 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/Configurations/JavaScriptCore.xcconfig
+++ b/JavaScriptCore/Configurations/JavaScriptCore.xcconfig
@@ -9,7 +9,7 @@ FEATURE_DEFINES = ENABLE_DATABASE ENABLE_ICONDATABASE ENABLE_SVG ENABLE_SVG_EXPE
 OTHER_LDFLAGS = -lobjc -sub_library libobjc -Wl,-Y,3;
 GCC_PREFIX_HEADER = JavaScriptCorePrefix.h;
 GCC_PREPROCESSOR_DEFINITIONS = $(DEBUG_DEFINES) $(GCC_PREPROCESSOR_DEFINITIONS);
-HEADER_SEARCH_PATHS = . icu "${BUILT_PRODUCTS_DIR}/DerivedSources/JavaScriptCore" $(HEADER_SEARCH_PATHS);
+HEADER_SEARCH_PATHS = "${BUILT_PRODUCTS_DIR}/DerivedSources/JavaScriptCore" $(HEADER_SEARCH_PATHS);
 INFOPLIST_FILE = Info.plist;
 INSTALL_PATH = $(SYSTEM_LIBRARY_DIR)/Frameworks;
 PRODUCT_NAME = JavaScriptCore;
