--- a/JavaScriptCore/Configurations/Base.xcconfig
+++ b/JavaScriptCore/Configurations/Base.xcconfig
@@ -30,6 +30,7 @@ WARNING_CFLAGS_ppc = $(WARNING_CFLAGS_BASE) -Wshorten-64-to-32;
 // FIXME: JavaScriptCore 64-bit builds should build with -Wshorten-64-to-32
 WARNING_CFLAGS_ppc64 = $(WARNING_CFLAGS_BASE);
 WARNING_CFLAGS_x86_64 = $(WARNING_CFLAGS_BASE);
+HEADER_SEARCH_PATHS = . icu $(HEADER_SEARCH_PATHS);
 
 
 // <rdar://problem/5488678>: Production builds on 10.4 PowerPC need to have debugging symbols disabled to prevent a huge STABS section being generated.
