Build WebCore as a sub-framework of WebKit in all configurations.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27860 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/Configurations/WebCore.xcconfig
+++ b/WebCore/Configurations/WebCore.xcconfig
@@ -13,3 +13,4 @@ HEADER_SEARCH_PATHS = ForwardingHeaders icu /usr/include/libxslt /usr/include/li
 INFOPLIST_FILE = Info.plist;
 INSTALL_PATH = $(SYSTEM_LIBRARY_DIR)/Frameworks/WebKit.framework/Versions/A/Frameworks;
 PRODUCT_NAME = WebCore;
+OTHER_LDFLAGS = -lobjc -sub_library libobjc -umbrella WebKit;
