Reviewed by Maciej.
        http://bugs.webkit.org/show_bug.cgi?id=16077
        <rdar://problem/5609785> XSLT processor <xsl:sort> algorithm is incompatible with other
        browser implementations

        Test: fast/xsl/sort-unicode.xml

        * xml/XSLTProcessor.cpp:
        (WebCore::XSLTProcessor::transformToString): Set a custom sort function.

        * xml/XSLTUnicodeSort.cpp: Added.
        (init_xsltTransformError):
        (xsltTransformError):
        (WebCore::xsltUnicodeSortFunction):
        * xml/XSLTUnicodeSort.h: Added.
        ICU-based implementation of xsl:sort, using an example from libxslt distribution.
        Only minimal coding style fixes to ease synchronization with upstream in the future.

        * icu/unicode/ucol.h: Added.
        * icu/unicode/uset.h: Added.
        Taken from ICU 3.2

        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        Added XSLTUnicodeSort.cpp.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27984 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -5916,6 +5916,14 @@
 				RelativePath="..\xml\XSLTProcessor.h"
 				>
 			</File>
+			<File
+				RelativePath="..\xml\XSLTUnicodeSort.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\xml\XSLTUnicodeSort.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="dom"
