Add COMEnumVariant.h to the project.
        * WebKit.vcproj/WebKit.vcproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28090 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/WebKit.vcproj/WebKit.vcproj
+++ b/WebKit/win/WebKit.vcproj/WebKit.vcproj
@@ -350,6 +350,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\COMEnumVariant.h"
+				>
+			</File>
+			<File
 				RelativePath="..\DefaultDownloadDelegate.h"
 				>
 			</File>
