Windows build fix.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28131 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -6697,6 +6697,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\editing\RemoveFormatCommand.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\editing\RemoveNodeAttributeCommand.cpp"
 				>
 			</File>
