Include all WebKit posts from Trolltech Labs
        * config.ini:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28276 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/config.ini
+++ b/PlanetWebKit/config.ini
@@ -94,9 +94,8 @@ nick = zecke
 name = Justin Haygood
 nick = jhaygood
 
-[http://labs.trolltech.com/blogs/feed/atom/?cat=9&author=2]
-name = Simon Hausmann
-nick = tronical
-
 [http://webkit.org/blog/feed/]
 name = Surfin' Safari
+
+[http://labs.trolltech.com/blogs/feed/atom/?cat=9]
+name = Trolltech Labs
