Add another feed
        * config.ini:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28278 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/config.ini
+++ b/PlanetWebKit/config.ini
@@ -82,6 +82,10 @@ faceheight = 85
 # "natively" knows about.  Look at fancy-examples/index.html.tmpl
 # for the flip-side of this.
 
+[http://www.kdedevelopers.org/blog/105/feed]
+name = Adam Treat
+filter = webkit
+
 [http://www.atoker.com/blog/category/webkit/feed/]
 name = Alp Toker
 nick = alp
