Reviewed by Mark Rowe.
        * config.ini: Correct blog name.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28306 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/config.ini
+++ b/PlanetWebKit/config.ini
@@ -99,7 +99,7 @@ name = Justin Haygood
 nick = jhaygood
 
 [http://webkit.org/blog/feed/]
-name = Surfin' Safari
+name = Surfin&rsquo; Safari
 
 [http://labs.trolltech.com/blogs/feed/atom/?cat=9]
 name = Trolltech Labs
