Install WebKit and WebKitWidgets
Change-Id: I24663378370a22f66cd6df3be00812981650d775

--- a/Source/WebKit/CMakeLists.txt
+++ b/Source/WebKit/CMakeLists.txt
@@ -50,6 +50,9 @@ endif ()
 
 WEBKIT_FRAMEWORK(WebKit)
 
+set_target_properties(WebKit PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
+install(TARGETS WebKit DESTINATION "${LIB_INSTALL_DIR}")
+
 add_dependencies(WebKit WebCore)
 if (WIN32)
     add_dependencies(WebKit WebKitGUID)
