Implemented KeyedEncoderQt and KeyedDecoderQt.
Change-Id: Ie61e178c6eb3cffcec2c4836649bac56c5b1eb6c

--- a/Source/WebKit/qt/tests/CMakeLists.txt
+++ b/Source/WebKit/qt/tests/CMakeLists.txt
@@ -26,6 +26,9 @@ set(QtWK1ApiTests_RUNTIME_OUTPUT_DIRECTORY
 )
 
 set(QtWK1ApiTests
+    keyeddecoderqt
+    keyedencoderqt
+
     qgraphicswebview
     qobjectbridge
     qwebelement
