Travis CI should check style against qtwebkit-stable branch
Change-Id: I632821d214ae5cebd1987c020ea064006c6f1715

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python: "2.7"
 sudo: false
 git:
   depth: 3
-script: Tools/Scripts/check-webkit-style -g qtwebkit-1..
+script: Tools/Scripts/check-webkit-style -g qtwebkit-stable..
 install: true
