--- a/Source/WebKit2/wpe-webkit.pc.in
+++ b/Source/WebKit2/wpe-webkit.pc.in
@@ -4,7 +4,7 @@ libdir=@LIB_INSTALL_DIR@
 includedir=${prefix}/include
 
 Name: WebKit2
-Description: WPE-flavored Web engige
+Description: WPE-flavored Web engine
 Version: @PROJECT_VERSION@
 Requires: glib-2.0 libsoup-2.4
 Libs: -L${libdir} -lWPEWebKit -lWPE
