--- a/Source/WebKit2/wpe-webkit.pc.in
+++ b/Source/WebKit2/wpe-webkit.pc.in
@@ -6,6 +6,6 @@ includedir=${prefix}/include
 Name: WebKit2
 Description: WPE-flavored Web engine
 Version: @PROJECT_VERSION@
-Requires: glib-2.0 libsoup-2.4
+Requires.private: glib-2.0 libsoup-2.4
 Libs: -L${libdir} -lWPEWebKit -lWPE
 Cflags: -I${includedir}/wpe-@WPE_API_VERSION@ -I${includedir}/wpe-@WPE_API_VERSION@/WPE
