WPE: move WPELauncher, WPEEmbedder source under Tools/wpe/examples/.

--- a/Tools/wpe/examples/embedder/CMakeLists.txt
+++ b/Tools/wpe/examples/embedder/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(WPE_EMBEDDER_DIR "${TOOLS_DIR}/WPEEmbedder")
+set(WPE_EMBEDDER_DIR "${TOOLS_DIR}/wpe/examples/embedder")
 
 set(WPE_EMBEDDER_SOURCES
     ${WPE_EMBEDDER_DIR}/main.cpp
