--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -36,8 +36,8 @@ elseif ("${PORT}" STREQUAL "JSCOnly")
         add_subdirectory(TestWebKitAPI)
     endif ()
 elseif ("${PORT}" STREQUAL "WPE")
-    add_subdirectory(WPEEmbedder)
-    add_subdirectory(WPELauncher)
+    add_subdirectory(wpe/examples/embedder)
+    add_subdirectory(wpe/examples/launcher)
     if (DEVELOPER_MODE)
         add_subdirectory(WebKitTestRunner)
     endif ()
