WPE: add the basics for the headless example.

--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -37,6 +37,7 @@ elseif ("${PORT}" STREQUAL "JSCOnly")
     endif ()
 elseif ("${PORT}" STREQUAL "WPE")
     add_subdirectory(wpe/examples/embedder)
+    add_subdirectory(wpe/examples/headless)
     add_subdirectory(wpe/examples/launcher)
     if (DEVELOPER_MODE)
         add_subdirectory(WebKitTestRunner)
