--- a/Tools/wpe/examples/headless/CMakeLists.txt
+++ b/Tools/wpe/examples/headless/CMakeLists.txt
@@ -15,12 +15,14 @@ set(WPEHeadless_INCLUDE_DIRECTORIES
 
 set(WPEHeadless_SYSTEM_INCLUDE_DIRECTORIES
     ${GLIB_INCLUDE_DIRS}
+    ${CAIRO_INCLUDE_DIRS}
 )
 
 set(WPEHeadless_LIBRARIES
     WebKit2
     WPE-mesa
     ${GLIB_LIBRARIES}
+    ${CAIRO_LIBRARIES}
 )
 
 include_directories(SYSTEM ${WPEHeadless_SYSTEM_INCLUDE_DIRECTORIES})
