--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -40,6 +40,7 @@ elseif ("${PORT}" STREQUAL "WPE")
     add_subdirectory(wpe/examples/headless)
     add_subdirectory(wpe/examples/launcher)
     if (DEVELOPER_MODE)
+        add_subdirectory(ImageDiff)
         add_subdirectory(WebKitTestRunner)
     endif ()
 endif ()
