getting and setting entire cookie jar
Currently there's no way to set entire cookie jar (from server)
and get it to save somewhere outside. Without change notification.
Added.

--- a/Source/WebKit2/WebProcess/Cookies/WebCookieManager.messages.in
+++ b/Source/WebKit2/WebProcess/Cookies/WebCookieManager.messages.in
@@ -33,6 +33,9 @@
     void SetHTTPCookieAcceptPolicy(uint32_t policy)
     void GetHTTPCookieAcceptPolicy(uint64_t callbackID)
     
+    void SetCookies(Vector<String> cookies)
+    void GetCookies(uint64_t callbackID)
+
     void StartObservingCookieChanges()
     void StopObservingCookieChanges()
 
