WPE-mesa: Export EGLImages
Changes the exportable interface to export EGLImages instead of
DMA Buf file descriptors.

--- a/Tools/wpe/examples/embedder/CMakeLists.txt
+++ b/Tools/wpe/examples/embedder/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(WaylandEGL REQUIRED)
+
 set(WPE_EMBEDDER_DIR "${TOOLS_DIR}/wpe/examples/embedder")
 
 set(WPE_EMBEDDER_SOURCES
@@ -15,13 +17,14 @@ set(WPE_EMBEDDER_INCLUDE_DIRECTORIES
 
 set(WPE_EMBEDDER_SYSTEM_INCLUDE_DIRECTORIES
     ${GLIB_INCLUDE_DIRS}
+    ${WAYLAND_EGL_INCLUDE_DIRS}
 )
 
 set(WPE_EMBEDDER_LIBRARIES
     WebKit2
     WPE-mesa
-    wayland-egl
     ${GLIB_LIBRARIES}
+    ${WAYLAND_EGL_LIBRARIES}
 )
 
 include_directories(SYSTEM ${WPE_EMBEDDER_SYSTEM_INCLUDE_DIRECTORIES})
