Build fixes after the latest pull from upstream.

--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -36,9 +36,9 @@ elseif ("${PORT}" STREQUAL "JSCOnly")
         add_subdirectory(TestWebKitAPI)
     endif ()
 elseif ("${PORT}" STREQUAL "WPE")
-    add_subdirectory(wpe/examples/embedder)
-    add_subdirectory(wpe/examples/headless)
-    add_subdirectory(wpe/examples/launcher)
+    #add_subdirectory(wpe/examples/embedder)
+    #add_subdirectory(wpe/examples/headless)
+    #add_subdirectory(wpe/examples/launcher)
     if (DEVELOPER_MODE)
         add_subdirectory(ImageDiff)
         add_subdirectory(WebKitTestRunner)
